# jma-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  main.py  pyproject.toml
jma_scraper/: app.py
jma_scraper/core/: html_to_dataframe.py  location_instances.py  location_spec.py  repository.py  url_formatter.py
jma_scraper/infrastracture/: db_tables.py  http_client.py  localfile.py  r2.py  sqlite_starter.py
jma_scraper/input_inferfaces/: command_line.py
jma_scraper/usecase/hamamatsu/: hamamatsu_every_10_minutes.py  write_scenario_interface.py  write_scenario_local.py  write_scenario_r2.py
requirements/: linting.in  linting.txt  pyproject.txt  testing.txt
tests/: conftest.py  test_db_tables.py  test_hamamatsu_every_10minutes_html_to_dataframe.py  test_html_to_dataframe.py  test_location_spec.py  test_scrape_jma.py
tests/e2e/: test_command_line.py  test_fetch_df.py  test_iwata_e2e.py
tests/input_examples/: hamamatsu_every_10min_only_table.html  hamamatsu_jma.html
